--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,7 @@ spring:
         persistence:
           validation:
             mode: none
+    open-in-view: false
   hateoas:
     use-hal-as-default-json-media-type: true
   jackson:
