--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,14 @@
     <properties>
         <java.version>17</java.version>
         <springdoc.version>1.6.6</springdoc.version>
+        <springdoc-openapi-maven-plugin.version>1.3</springdoc-openapi-maven-plugin.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <spring-native.version>0.11.3</spring-native.version>
+        <jib-maven-plugin.version>3.2.0</jib-maven-plugin.version>
+        <jib-maven-plugin.architecture>amd64</jib-maven-plugin.architecture>
+        <jib.from.image>eclipse-temurin:17-jre-focal</jib.from.image>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -160,11 +163,106 @@
                                     <artifactId>lombok</artifactId>
                                 </exclude>
                             </excludes>
+                            <jvmArguments>-Dspring.application.admin.enabled=true
+                                -Dspringdoc.writer-with-default-pretty-printer=true
+                            </jvmArguments>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>start</goal>
+                                    <goal>build-info</goal>
+                                    <goal>stop</goal>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springdoc</groupId>
+                        <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                        <version>${springdoc-openapi-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>integration-test</id>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <apiDocsUrl>http://localhost:8080/v3/api-docs.yaml
+                            </apiDocsUrl>
+                            <outputFileName>openapi.yaml</outputFileName>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>jib</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>
+                                    <groupId>org.projectlombok</groupId>
+                                    <artifactId>lombok</artifactId>
+                                </exclude>
+                            </excludes>
+                            <jvmArguments>-Dspring.application.admin.enabled=true
+                                -Dspringdoc.writer-with-default-pretty-printer=true
+                            </jvmArguments>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>start</goal>
+                                    <goal>build-info</goal>
+                                    <goal>stop</goal>
+                                    <goal>repackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>${jib-maven-plugin.version}</version>
+                        <configuration>
+                            <from>
+                                <image>${jib.from.image}</image>
+                                <platforms>
+                                    <platform>
+                                        <architecture>${jib-maven-plugin.architecture}</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                </platforms>
+                            </from>
+                            <to>
+                                <image>registry.heroku.com/hateoas-fullstack-api/web</image>
+                            </to>
+                            <container>
+                                <jvmFlags>
+                                    <jvmFlag>-XshowSettings:vm</jvmFlag>
+                                    <jvmFlag>-noverify</jvmFlag>
+                                    <jvmFlag>-Dspring.main.lazy-initialization=true
+                                    </jvmFlag>
+                                    <jvmFlag>-XX:TieredStopAtLevel=1</jvmFlag>
+                                    <jvmFlag>-XX:+UseSerialGC</jvmFlag>
+                                </jvmFlags>
+                            </container>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+
         <profile>
             <id>native-image</id>
             <dependencies>
@@ -187,7 +285,7 @@
                             </excludes>
                             <image>
                                 <builder>paketobuildpacks/builder:tiny</builder>
-                                <name>docker.io/suayb/hateoas-fullstack-api:latest</name>
+                                <name>registry.heroku.com/hateoas-fullstack-api/web</name>
                                 <env>
                                     <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                                     <BP_BINARY_COMPRESSION_METHOD>upx</BP_BINARY_COMPRESSION_METHOD>
@@ -245,6 +343,7 @@
                 </plugins>
             </build>
         </profile>
+
         <profile>
             <id>native</id>
             <properties>
