--- a/hateoas-frontend/nginx/nginx.conf
+++ b/hateoas-frontend/nginx/nginx.conf
@@ -1,11 +1,36 @@
 server {
     listen   $PORT;
+
+    # save logs here
+    access_log /var/log/nginx/access.log compression;
     server_name  _;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+   location / {
+       # First attempt to serve request as file, then
+       # as directory, then fall back to redirecting to index.html
+       try_files $uri $uri/ /index.html;
+  }
+
+  # Media: images, icons, video, audio, HTC
+  location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+      expires 1M;
+      access_log off;
+      add_header Cache-Control "public";
+  }
+
+  # Javascript and CSS files
+  location ~* \.(?:css|js)$ {
+      try_files $uri =404;
+      expires 1y;
+      access_log off;
+      add_header Cache-Control "public";
+  }
+
+  # Any route containing a file extension (e.g. /devicesfile.js)
+  location ~ ^.+\..+$ {
+      try_files $uri =404;
+  }
 }
