--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,13 @@
 server {
     listen   $PORT;
-
-    # save logs here
-    access_log /var/log/nginx/access.log compression;
     server_name  _;
 
-    root /usr/share/nginx/html;
     index index.html;
+    root /usr/share/nginx/html;
+
+    # save logs here
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 
    location / {
        # First attempt to serve request as file, then
