--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>io.github.susimsek</groupId>
     <artifactId>hateoas-backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>hateoas-backend</name>
     <description>hateoas-backend</description>
     <properties>
