--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,9 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Exclude git history and configuration.
+.git
+.gitignore
+README.md
+HELP.md
+LICENSE
 
 ######################
 # Node
@@ -15,6 +20,10 @@ build/
 /.pnp
 .pnp.js
 
+# Exclude docker compose files.
+docker-compose.yaml
+docker-compose.*.yml
+.env
 
 # Exclude vagrant files.
 .vagrant
@@ -47,17 +56,9 @@ out/
 !.vscode/extensions.json
 *.code-workspace
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Exclude "build-time" ignore files.
+.dockerignore
+.gcloudignore
 
 # Files that might appear on external disk
 .Spotlight-V100
