--- a/hateoas-frontend/package.json
+++ b/hateoas-frontend/package.json
@@ -14,8 +14,8 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
-    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
