--- a/hateoas-backend/sonar-project.properties
+++ b/hateoas-backend/sonar-project.properties
@@ -6,13 +6,12 @@ sonar.host.url=http://localhost:9000
 sonar.login=98bbbe68585aaa260605a3547a0008680d95eb1b
 
 sonar.sources=src/main/
-sonar.java.binaries=target/classes
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=src/test/**/*.*
-sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
-sonar.java.codeCoveragePlugin=jacoco
-sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
+# sonar.test.inclusions=src/test/**/*.*
+# sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
+# sonar.java.codeCoveragePlugin=jacoco
+# sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
 
 
 sonar.issue.ignore.multicriteria=S3437,S4502,S4684,UndocumentedApi
