added sonar issues

--- a/hateoas-backend/pom.xml
+++ b/hateoas-backend/pom.xml
@@ -24,6 +24,7 @@
         <jib-maven-plugin.architecture>amd64</jib-maven-plugin.architecture>
         <jib.from.image>eclipse-temurin:17-jre-focal</jib.from.image>
         <heroku.image.name>registry.heroku.com/hateoas-fullstack-api/web</heroku.image.name>
+        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <sonar-maven-plugin.version>3.9.1.2184</sonar-maven-plugin.version>
         <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
@@ -137,6 +138,10 @@
                         </compilerArg>
                     </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>${maven-clean-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
