--- a/graalvm/Dockerfile
+++ b/graalvm/Dockerfile
@@ -1,19 +1,22 @@
 FROM ghcr.io/graalvm/graalvm-ce:ol7-java17
 
-# For SDKMAN to work we need unzip & zip
-RUN yum install -y unzip zip
+ENV MAVEN_VERSION=3.8.3
+USER root
 
-RUN \
-    # Install SDKMAN
-    curl -s "https://get.sdkman.io" | bash; \
-    source "$HOME/.sdkman/bin/sdkman-init.sh"; \
-    sdk install maven; \
-    # Install GraalVM Native Image
-    gu install native-image;
+# Maven
+RUN curl -fsSL https://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
+  && mv /usr/share/apache-maven-$MAVEN_VERSION /usr/share/maven \
+  && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn
 
+
+ENV M2_HOME /usr/share/maven
+ENV maven.home $M2_HOME
+ENV M2 $M2_HOME/bin
+ENV PATH $M2:$PATH
+
+# Again using non-root user i.e. stakater as set in base image
+USER 10001
 
 RUN java -version
 
-RUN source "$HOME/.sdkman/bin/sdkman-init.sh" && mvn --version
-
-RUN native-image --version
+RUN mvn --version
