--- a/pom.xml
+++ b/pom.xml
@@ -368,7 +368,13 @@
                                         --initialize-at-build-time=sun.instrument.InstrumentationImpl
                                         --initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils
                                     </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
-                                    <publish>false</publish>
+                                    <publish>true</publish>
+                                    <docker>
+                                        <publishRegistry>
+                                            <username>${DOCKER_REGISTRY_USER}</username>
+                                            <token>${DOCKER_REGISTRY_PWD}</token>
+                                        </publishRegistry>
+                                    </docker>
                                     <pullPolicy>IF_NOT_PRESENT</pullPolicy>
                                 </env>
                             </image>
