--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,10 @@
                             </from>
                             <to>
                                 <image>${heroku.image.name}</image>
+                                <auth>
+                                    <username>${DOCKER_REGISTRY_USER}</username>
+                                    <password>${DOCKER_REGISTRY_PWD}</password>
+                                </auth>
                             </to>
                             <container>
                                 <jvmFlags>
