--- a/pom.xml
+++ b/pom.xml
@@ -380,8 +380,8 @@
                             </image>
                             <docker>
                                 <publishRegistry>
-                                    <username>${env.DOCKER_REGISTRY_USER}</username>
-                                    <password>${env.DOCKER_REGISTRY_PWD}</password>
+                                    <username>${DOCKER_REGISTRY_USER}</username>
+                                    <password>${DOCKER_REGISTRY_PWD}</password>
                                 </publishRegistry>
                             </docker>
                         </configuration>
