--- a/hateoas-frontend/package.json
+++ b/hateoas-frontend/package.json
@@ -13,9 +13,13 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
